--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import "lock.css";
 .login-page {
     width: 360px;
     padding: 8% 0 0;
@@ -116,3 +117,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+/*Site killswitch
+
+body * { display: none !important; }*/
+
